# SDKs

.github/workflows/: publish-python.yml  python-publish.yml
SDKs/pythonSdk/: README.md  pyproject.toml
SDKs/pythonSdk/src/modexia/: client.py
SDKs/pythonSdk/src/modexiaagentpay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SDKs/pythonSdk/tests/: test_client.py
