[build-system]
requires = ["setuptools >= 77.0.3", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "modexiaagentpay"
version = "0.4.0"
description = "Modexia AgentPay — Python SDK for agent wallets & payments (USDC)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["modexia", "agentpay", "sdk", "payments", "usdc"]
authors = [
	{ name = "Modaniels", email = "modaniels@modexia.software" }
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/Modaniel/SDKs"
Repository = "https://github.com/Modaniel/SDKs"
Documentation = "https://github.com/Modaniel/SDKs/docs"
Changelog = "https://github.com/Modaniel/SDKs/releases"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine", "requests-mock", "pytest-asyncio", "pytest-httpx"]

[tool.setuptools.packages.find]
where = ["src"]